--- a/prometheus-cf.yml
+++ b/prometheus-cf.yml
@@ -11,41 +11,6 @@ Parameters:
     Description: The EC2 instance type
     Type: String
     Default: t2.medium
-    AllowedValues:
-      - t2.micro
-      - t2.small
-      - t2.medium
-      - m3.medium
-      - m3.large
-      - m3.xlarge
-      - m3.2xlarge
-      - c3.large
-      - c3.xlarge
-      - c3.2xlarge
-      - c3.4xlarge
-      - c3.8xlarge
-      - c4.large
-      - c4.xlarge
-      - c4.2xlarge
-      - c4.4xlarge
-      - c4.8xlarge
-      - r3.large
-      - r3.xlarge
-      - r3.2xlarge
-      - r3.4xlarge
-      - r3.8xlarge
-      - i2.xlarge
-      - i2.2xlarge
-      - i2.4xlarge
-      - i2.8xlarge
-      - d2.xlarge
-      - d2.2xlarge
-      - d2.4xlarge
-      - d2.8xlarge
-      - hi1.4xlarge
-      - hs1.8xlarge
-      - cr1.8xlarge
-      - cc2.8xlarge
     ConstraintDescription: must be a valid EC2 instance type.
   SSHLocation:
     Description: ' The IP address range that can be used to SSH to the EC2 instances'
@@ -55,6 +20,18 @@ Parameters:
     Default: 0.0.0.0/0
     AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
     ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
+  VPC:
+    Description: id of VPC to use
+    Type: String
+    Default: vpc-837997e5
+  InternetGateway:
+    Description: gateway for vpc stuff to use. default to existing development environment igw
+    Type: String
+    Default: igw-b18b2cd6
+  Subnet1:
+    Description: id of existing subnet in VPC (e.g. Development_PublicSubnet1)
+    Type: String
+    Default: subnet-0b80bb6c
   CIDRVPC:
     Description: Enter the CIDR Range for your VPC
     Type: String
@@ -76,41 +53,42 @@ Parameters:
     Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
     Default: /aws/service/ecs/optimized-ami/amazon-linux/recommended/image_id
 Resources:
-  VPC:
-    Type: 'AWS::EC2::VPC'
-    Properties:
-      CidrBlock: !Ref CIDRVPC
-      EnableDnsSupport: true
-      EnableDnsHostnames: true
-      Tags:
-        - Key: Name
-          Value: Volume-Driver VPC
-  Subnet1:
-    Type: 'AWS::EC2::Subnet'
-    Properties:
-      VpcId: !Ref VPC
-      MapPublicIpOnLaunch: true
-      CidrBlock: !Ref CIDRSubnet1
-      AvailabilityZone: !Select 
-        - '0'
-        - !GetAZs 
-          Ref: 'AWS::Region'
-  InternetGateway:
-    Type: 'AWS::EC2::InternetGateway'
-    Properties:
-      Tags:
-        - Key: Application
-          Value: !Ref 'AWS::StackName'
-        - Key: Network
-          Value: Public
+  # Dev VPC is vpc-837997e5
+  # VPC:
+  #   Type: 'AWS::EC2::VPC'
+  #   Properties:
+  #     CidrBlock: !Ref CIDRVPC
+  #     EnableDnsSupport: true
+  #     EnableDnsHostnames: true
+  #     Tags:
+  #       - Key: Name
+  #         Value: Volume-Driver VPC
+  # Subnet1:
+  #   Type: 'AWS::EC2::Subnet'
+  #   Properties:
+  #     VpcId: !Ref VPC
+  #     MapPublicIpOnLaunch: true
+  #     CidrBlock: !Ref CIDRSubnet1
+  #     AvailabilityZone: !Select 
+  #       - '0'
+  #       - !GetAZs 
+  #         Ref: 'AWS::Region'
+  # InternetGateway:
+  #   Type: 'AWS::EC2::InternetGateway'
+  #   Properties:
+  #     Tags:
+  #       - Key: Application
+  #         Value: !Ref 'AWS::StackName'
+  #       - Key: Network
+  #         Value: Public
   GatewayToInternet:
     Type: 'AWS::EC2::VPCGatewayAttachment'
     Properties:
       VpcId: !Ref VPC
       InternetGatewayId: !Ref InternetGateway
   PublicRouteTable:
-    DependsOn:
-      - VPC
+    # DependsOn:
+    #   - VPC
     Type: 'AWS::EC2::RouteTable'
     Properties:
       VpcId: !Ref VPC
@@ -122,7 +100,6 @@ Resources:
   PublicRoute:
     DependsOn:
       - PublicRouteTable
-      - InternetGateway
     Type: 'AWS::EC2::Route'
     Properties:
       RouteTableId: !Ref PublicRouteTable
@@ -130,7 +107,6 @@ Resources:
       GatewayId: !Ref InternetGateway
   PublicSubnetRouteTableAssociation:
     DependsOn:
-      - Subnet1
       - PublicRouteTable
     Type: 'AWS::EC2::SubnetRouteTableAssociation'
     Properties:
@@ -398,7 +374,8 @@ Outputs:
     Value: !Ref 'AWS::Region'
   AvailabilityZone:
     Description: The AZ where the instances are deployed
-    Value: !GetAtt 
+    Value: 
+      !GetAtt
       - Subnet1
       - AvailabilityZone
   NLBFullyQualifiedName:
