--- a/templates/rexray-demo-cf.yml
+++ b/templates/rexray-demo-cf.yml
@@ -423,6 +423,6 @@ Outputs:
   SecurityGroupId:
     Description: The ID of security group that the instances are members of
     Value: !Ref InstanceSecurityGroup
-  MySQLTargetGroupArn:
+  PrometheusTargetGroupArn:
     Description: The Arn of the MySQL target group
     Value: !Ref MySQLTargetGroup
